# diffrend

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-verison.yml
diffrend/: __init__.py
docs/: conf.py  index.rst
