[tool.poetry]
name = "diffrend"
version = "0.0.2"
description = "Coming soon"
authors = ["Shelby Smith <shelby@shelbysm.com>"]
license = "MIT"
readme = "README.md"
package-mode = true
repository = "https://github.com/shelbylsmith/diffrend"
documentation = "https://shelbylsmith.github.io/diffrend/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
check-manifest = "^0.50"
pre-commit = "^4.0.1"
pytest-cov = "^5.0.0"
pytest = "^8.3.3"
ruff = "^0.7.0"
pyright = "^1.1.386"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Tracker = "https://github.com/shelbylsmith/diffrend"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.pyright]
include = ["diffrend"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]

reportMissingImports = true
reportMissingTypeStubs = false

executionEnvironments = [
  { root = "diffrend" }
]

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov diffrend --cov-fail-under 0 --cov-append"
pythonpath = [
  "diffrend"
]
testpaths = "tests"
junit_family = "xunit2"

[tool.tox]
envlist = ["testenv"]

[tool.tox.env.testenv]
commands = ["pytest {posargs}"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "S", "ERA", "B", "C4", "RUF"]

[tool.bumpversion]
current_version = "0.0.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "^version\\s*=\\s*\"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "diffrend/__init__.py"
search = "^__version__\\s*=\\s*\"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "^release\\s*=\\s*\"{current_version}\""
replace = "release = \"{new_version}\""